--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,13 @@ description: Blog
 meta_description: "Tech Blog"
 
 markdown: kramdown
-highlighter: rouge
 logo: false
 paginate: 10
 baseurl: /
-domain_name: 'http://yourblog-domain.com'
+domain_name: 'http://coolmanishks.github.io'
 google_analytics: 'UA-XXXXXXXX-X'
 gems: [jekyll-paginate]
 
 # Details for the RSS feed generator
-url:            'blog url'
-author:         'Your Name'
+url:            'http://coolmanishks.github.io'
+author:      'Manish Kumar Singh'
